# dicom-anonymizer

./: .gitignore  Cargo.toml  LICENSE  README.md  test.yaml
.github/workflows/: ci.yml
anonymizer/: Cargo.toml
anonymizer/src/: anonymizer.rs  args.rs  cli.rs  enums.rs  file.rs  lib.rs  macros.rs  main.rs  meta.rs  utils.rs  validator.rs
anonymizer_lib/: Cargo.toml
anonymizer_lib/src/: anonymizer.rs  dicom_date_time.rs  enums.rs  file.rs  lib.rs  macros.rs  meta.rs  tag.rs
anonymizer_lib/src/enums/: mod.rs  patient_sex.rs  remove_tags_input.rs  tag_action.rs
anonymizer_lib/src/snapshots/: anonymizer_lib__meta__tests__serialize__basic_values.snap  anonymizer_lib__meta__tests__serialize__complex_values.snap  anonymizer_lib__meta__tests__serialize__default.snap
anonymizer_lib/src/types/: dicom_date_time.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs  utils.rs
cli/src/app/: args.rs  cli.rs  commands.rs  config.rs  mod.rs  types.rs  utils.rs  validator.rs
cli/src/app/anonymizer/: logic.rs  mod.rs  values.rs
cli/src/app/args/: anonymizer.rs  config.rs  mod.rs
cli/src/app/config/: file.rs  logic.rs  macros.rs  mod.rs  values.rs  versions.rs
tags_list/: Cargo.toml
tags_list/src/: lib.rs
tags_list_lib/: Cargo.toml
wasm_lib/: Cargo.toml
wasm_lib/src/: lib.rs
