[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anonymizer = { path = "../anonymizer" }
tags_list = { path = "../tags_list" }
dicom-core = "0.5.0"
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0.57"
chrono = "0.4.19"
