cargo-features = ["per-package-target"]

[package]
name = "wasm_lib"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anonymizer_lib = { path = "../anonymizer_lib" }
dicom-object = "0.5.0"
js-sys = "0.3.57"
once_cell = "1.12.0"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
web-sys = { version = "0.3.57", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.30"
